# content_based_flitering_movie_recommendation

./: .gitignore  README.md  movie_recommendation.ipynb  movie_recommendation_v1.0.1.ipynb  pyproject.toml  recomend.py  web_scrapper.ipynb
