[tool.poetry]
name = "movie-recommendation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
